add: SPドロワー（JS未実装）

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="header__inner">
         <div class="header__logo">
-          <a href="/"><img src="img/logo.png" alt="e-tiga"></a>
+          <a href="/"><img src="./img/logo.png" alt="e-tiga" /></a>
         </div>
         <nav class="header__nav">
           <div class="nav__inner">
@@ -36,6 +36,19 @@
         </button>
       </div>
     </header>
+
+    <div id="js-drawer-content" class="drawer-content">
+      <div class="drawer-content__logo">
+        <img src="./img/logo-white.png" alt="" />
+      </div>
+      <nav class="drawer-content__menu">
+        <a href="" class="drawer-content__link">e-tigaとは</a>
+        <a href="" class="drawer-content__link">ご利用の流れ</a>
+        <a href="" class="drawer-content__link">プラン</a>
+        <a href="" class="drawer-content__link">運営会社</a>
+      </nav>
+    </div>
+
     <script src="./js/script.js"></script>
   </body>
 </html>
