update: ドロワー用のJSとアニメーションを追加

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="" class="nav__button">無料で登録</a>
           </div>
         </nav>
-        <button class="header__open drawer-icon">
+        <button id="js-drawer-icon" class="header__open drawer-icon">
           <span class="drawer-icon__bar"></span>
           <span class="drawer-icon__bar"></span>
           <span class="drawer-icon__bar"></span>
@@ -49,6 +49,7 @@
       </nav>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
