--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="" class="nav__link">運営会社</a>
           </div>
           <div class="nav__button-inner">
-            <a href="" class="nav__button">無料で登録</a>
+            <a href="" class="nav__button button">無料で登録</a>
           </div>
         </nav>
         <button id="js-drawer-icon" class="header__open drawer-icon">
@@ -47,6 +47,39 @@
         <a href="" class="drawer-content__link">プラン</a>
         <a href="" class="drawer-content__link">運営会社</a>
       </nav>
+    </div>
+
+    <div class="fv">
+      <div class="fv__inner">
+        <div class="fv__image">
+          <picture>
+            <!-- スマートフォン用画像 -->
+            <source
+              media="(max-width: 428px)"
+              srcset="./img/first-view-sp.png"
+            />
+
+            <!-- PC用画像 -->
+            <source
+              media="(min-width: 1280px)"
+              srcset="./img/first-view-pc.png"
+            />
+
+            <!-- フォールバック画像（デバイスが条件に一致しない場合に表示） -->
+            <img src="./img/first-view-pc.png" alt="ファーストビューの画像" />
+          </picture>
+        </div>
+        <div class="fv__content">
+          <div class="fv__logo"><img src="./img/logo.png" alt="" /></div>
+          <h2 class="fv__title">会社の「チーム力」を強化する</h2>
+          <p class="fv__text">
+            誰でも簡単らくらくに、<br />スケジュールや名刺をデジタル化。<br />チームの管理をよりスピーディーに円滑にします。
+          </p>
+          <div class="fv__button">
+            <a href="" class="button">無料で登録</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
