update: ブレイクポイントの見直し

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <a href="" class="nav__link">プラン</a>
             <a href="" class="nav__link">運営会社</a>
           </div>
-          <div class="nav__button-inner">
-            <a href="" class="nav__button button">無料で登録</a>
+          <div class="nav__button">
+            <a href="" class="button">無料で登録</a>
           </div>
         </nav>
         <button id="js-drawer-icon" class="header__open drawer-icon">
