--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+JP:wght@100..900&display=swap"
-    rel="stylesheet"
-  />
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+JP:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSSの読み込み -->
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -218,6 +218,25 @@
         </div>
       </div>
     </section>
+
+    <div class="concept">
+      <div class="concept__inner inner">
+        <div class="concept__image">
+          <img src="./img/concept-img.png" alt="" />
+        </div>
+        <div class="concept__contents">
+          <h2 class="concept__title">
+            名刺作成から、<br />スケジュール管理、<br />経理までを簡単スピーディーに。
+          </h2>
+          <p class="concept__text">
+            誰でも簡単らくらくに、スケジュールや名刺をデジタル化。チームの管理をよりスピーディーに円滑にします。誰でも簡単らくらくに、スケジュールや名刺をデジタル化。チームの管理をよりスピーディーに円滑にします。誰でも簡単らくらくに、
+          </p>
+          <div class="concept__button">
+            <a href="" class="button">詳細・できることへ</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
