add: casestudy htmlのみ

--- a/index.html
+++ b/index.html
@@ -238,6 +238,32 @@
       </div>
     </div>
 
+    <section class="casestudy">
+      <div class="casestudy__inner inner">
+        <div class="casestudy__title">
+          <div class="heading-2">
+            <h2 class="heading-2__en">CASESTUDY</h2>
+            <p class="heading-2__ja">お客様の声</p>
+          </div>
+          <div class="casestudy-card">
+            <div class="casestudy-card__img">
+              <img src="./img/case-1-img.png" alt="" />
+            </div>
+            <div class="casestudy-card__body">
+              <h3 class="casestudy-card__title">
+                在宅でも団結したチームワークに。
+              </h3>
+              <p class="casestudy-card__text">
+                <span>〇〇株式会社</span>
+                <span>吉本様</span>
+              </p>
+              <div class="casestudy-card__tag">情報通信業</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
   </body>
