--- a/index.html
+++ b/index.html
@@ -246,72 +246,93 @@
             <h2 class="heading-2__en">CASESTUDY</h2>
             <p class="heading-2__ja">お客様の声</p>
           </div>
-          <div class="swiper-container">
-            <!-- Slider main container -->
-            <div id="js-casestudy-swiper" class="swiper">
-              <!-- Additional required wrapper -->
-              <div class="swiper-wrapper">
-                <!-- Slides -->
-                <div class="swiper-slide casestudy-slide">
-                  <div class="casestudy-card">
-                    <div class="casestudy-card__img">
-                      <img src="./img/case-1-img.png" alt="" />
-                    </div>
-                    <div class="casestudy-card__body">
-                      <h3 class="casestudy-card__title">
-                        在宅でも団結したチームワークに。
-                      </h3>
-                      <p class="casestudy-card__text">
-                        <span>〇〇株式会社</span>
-                        <span>吉本様</span>
-                      </p>
-                      <small class="casestudy-card__tag">情報通信業</small>
-                    </div>
+        </div>
+        <div class="swiper-container">
+          <!-- Slider main container -->
+          <div id="js-casestudy-swiper" class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide casestudy-slide">
+                <div class="casestudy-card">
+                  <div class="casestudy-card__img">
+                    <img src="./img/case-1-img.png" alt="" />
                   </div>
-                </div>
-                <div class="swiper-slide casestudy-slide">
-                  <div class="casestudy-card">
-                    <div class="casestudy-card__img">
-                      <img src="./img/case-2-img.png" alt="" />
-                    </div>
-                    <div class="casestudy-card__body">
-                      <h3 class="casestudy-card__title">
-                        1日2時間分の処理時間の削減に成功
-                      </h3>
-                      <p class="casestudy-card__text">
-                        <span>〇〇株式会社</span>
-                        <span>竹内様</span>
-                      </p>
-                      <small class="casestudy-card__tag">情報通信業</small>
-                    </div>
-                  </div>
-                </div>
-                <div class="swiper-slide casestudy-slide">
-                  <div class="casestudy-card">
-                    <div class="casestudy-card__img">
-                      <img src="./img/case-3-img.png" alt="" />
-                    </div>
-                    <div class="casestudy-card__body">
-                      <h3 class="casestudy-card__title">
-                        導入から1年で残業0へ。
-                      </h3>
-                      <p class="casestudy-card__text">
-                        <span>〇〇株式会社</span>
-                        <span>三島様</span>
-                      </p>
-                      <small class="casestudy-card__tag">情報通信業</small>
-                    </div>
+                  <div class="casestudy-card__body">
+                    <h3 class="casestudy-card__title">
+                      在宅でも団結したチームワークに。
+                    </h3>
+                    <p class="casestudy-card__text">
+                      <span>〇〇株式会社</span>
+                      <span>吉本様</span>
+                    </p>
+                    <small class="casestudy-card__tag">情報通信業</small>
                   </div>
                 </div>
               </div>
-              <!-- If we need pagination -->
-              <div id="js-casestudy-pagination" class="swiper-pagination"></div>
+              <div class="swiper-slide casestudy-slide">
+                <div class="casestudy-card">
+                  <div class="casestudy-card__img">
+                    <img src="./img/case-2-img.png" alt="" />
+                  </div>
+                  <div class="casestudy-card__body">
+                    <h3 class="casestudy-card__title">
+                      1日2時間分の処理時間の削減に成功
+                    </h3>
+                    <p class="casestudy-card__text">
+                      <span>〇〇株式会社</span>
+                      <span>竹内様</span>
+                    </p>
+                    <small class="casestudy-card__tag">情報通信業</small>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide casestudy-slide">
+                <div class="casestudy-card">
+                  <div class="casestudy-card__img">
+                    <img src="./img/case-3-img.png" alt="" />
+                  </div>
+                  <div class="casestudy-card__body">
+                    <h3 class="casestudy-card__title">
+                      導入から1年で残業0へ。
+                    </h3>
+                    <p class="casestudy-card__text">
+                      <span>〇〇株式会社</span>
+                      <span>三島様</span>
+                    </p>
+                    <small class="casestudy-card__tag">情報通信業</small>
+                  </div>
+                </div>
+              </div>
 
-              <!-- If we need navigation buttons -->
-              <div id="js-casestudy-prev" class="swiper-button-prev"></div>
-              <div id="js-casestudy-next" class="swiper-button-next"></div>
+              <div class="swiper-slide casestudy-slide">
+                <div class="casestudy-card">
+                  <div class="casestudy-card__img">
+                    <img src="./img/case-1-img.png" alt="" />
+                  </div>
+                  <div class="casestudy-card__body">
+                    <h3 class="casestudy-card__title">
+                      在宅でも団結したチームワークに。
+                    </h3>
+                    <p class="casestudy-card__text">
+                      <span>〇〇株式会社</span>
+                      <span>吉本様</span>
+                    </p>
+                    <small class="casestudy-card__tag">情報通信業</small>
+                  </div>
+                </div>
+              </div>
             </div>
+            <!-- If we need pagination -->
+            <div id="js-casestudy-pagination" class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div id="js-casestudy-prev" class="swiper-button-prev"></div>
+            <div id="js-casestudy-next" class="swiper-button-next"></div>
           </div>
+        </div>
+        <div class="casestudy__button">
+          <a href="">全てみる</a>
         </div>
       </div>
     </section>
