Updated files after changing path structure

--- a/index.html
+++ b/index.html
@@ -337,6 +337,212 @@
       </div>
     </section>
 
+    <section class="price">
+      <div class="price__inner inner">
+        <div class="price__title">
+          <div class="heading-2">
+            <h2 class="heading-2__en">PRICE</h2>
+            <p class="heading-2__ja">料金</p>
+          </div>
+        </div>
+        <div class="price__card-container">
+          <div class="price__card-item price-card">
+            <div class="price-card__title">
+              <div class="price-card__title-main">ライトプラン</div>
+              <div class="price-card__title-sub">無料</div>
+            </div>
+            <div class="price-card__body">
+              <table class="price-card__table">
+                <tbody>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>人数</span>
+                        <span>3人</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>電話サポート</span>
+                        <span>なし</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>名刺作成</span>
+                        <span>月2枚まで</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート1</span>
+                        <span>なし</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート2</span>
+                        <span>なし</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート3</span>
+                        <span>なし</span>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="price-card__button">
+              <a href="" class="button">お申し込み</a>
+            </div>
+          </div>
+          <div class="price__card-item price-card">
+            <div class="price-card__title">
+              <div class="price-card__title-main">スタンダードプラン</div>
+              <div class="price-card__title-sub">
+                <span>月</span>980<span>円</span>
+              </div>
+            </div>
+            <div class="price-card__body">
+              <table class="price-card__table">
+                <tbody>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>人数</span>
+                        <span>20人</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>電話サポート</span>
+                        <span>なし</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>名刺作成</span>
+                        <span>月15枚まで</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート1</span>
+                        <span>あり</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート2</span>
+                        <span>なし</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート3</span>
+                        <span>なし</span>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="price-card__button">
+              <a href="" class="button">お申し込み</a>
+            </div>
+          </div>
+          <div class="price__card-item price-card">
+            <div class="price-card__title">
+              <div class="price-card__title-main">プロプラン</div>
+              <div class="price-card__title-sub">
+                <span>月</span>2,480<span>円</span>
+              </div>
+            </div>
+            <div class="price-card__body">
+              <table class="price-card__table">
+                <tbody>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>人数</span>
+                        <span>無制限</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>電話サポート</span>
+                        <span>無制限</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>名刺作成</span>
+                        <span>無制限</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート1</span>
+                        <span>あり</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート2</span>
+                        <span>あり</span>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td colspan="2">
+                      <div class="td-wrapper">
+                        <span>サポート3</span>
+                        <span>あり</span>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="price-card__button">
+              <a href="" class="button">お申し込み</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="./js/lib/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
