add: companyセクション

--- a/index.html
+++ b/index.html
@@ -543,6 +543,86 @@
       </div>
     </section>
 
+    <section class="company">
+      <div class="company__inner inner">
+        <div class="company__title">
+          <div class="heading-2">
+            <h2 class="heading-2__en">COMPANY</h2>
+            <p class="heading-2__ja">会社概要</p>
+          </div>
+        </div>
+        <div class="company__body">
+          <div class="company__tabs">
+            <button class="company__tab-item" data-tab="overview">
+              会社概要
+            </button>
+            <button class="company__tab-item" data-tab="history">沿革</button>
+            <button class="company__tab-item" data-tab="certification">
+              認証所得
+            </button>
+          </div>
+          <div class="company__contents">
+            <div class="company__content active" id="overview">
+              <div class="company-info">
+                <h3 class="company-info__title">会社概要</h3>
+                <div class="company-info__wrapper">
+                  <div class="company-info__item-1">会社名</div>
+                  <div class="company-info__item-2">株式会社e-tiga</div>
+                  <div class="company-info__item-3">資本金</div>
+                  <div class="company-info__item-4">1000万円</div>
+                  <div class="company-info__item-5">本社所在地</div>
+                  <div class="company-info__item-6">
+                    東京都〇〇区〇〇<br />〇〇ビル4階
+                  </div>
+                  <div class="company-info__item-7">創業</div>
+                  <div class="company-info__item-8">2018年7月10日</div>
+                  <div class="company-info__item-9">代表社員</div>
+                  <div class="company-info__item-10">田中 太郎</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="company__content" id="history">
+              <ul class="company__history">
+                <li class="company__history-item">
+                  2021年4月
+                  <span>株式会社e-tiga設立</span>
+                </li>
+                <li class="company__history-item">
+                  2021年12月
+                  <span>e-tigaリリース</span>
+                </li>
+                <li class="company__history-item">
+                  2022年3月
+                  <span>導入企業1,000社突破</span>
+                </li>
+                <li class="company__history-item">
+                  2022年10月
+                  <span>導入企業2,000社を突破</span>
+                </li>
+                <li class="company__history-item">
+                  2023年9月
+                  <span>事務所を渋谷に移転</span>
+                </li>
+              </ul>
+            </div>
+
+            <div class="company__content" id="certification">
+              <div class="company__certification">
+                <p>〇〇◎1111認証取得</p>
+                <p>
+                  国際規格である〇〇
+                  認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。国際規格である〇〇
+                  認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。国際規格である〇〇
+                  認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="./js/lib/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
