--- a/index.html
+++ b/index.html
@@ -565,20 +565,51 @@
             <div class="company__content active" id="overview">
               <div class="company-info">
                 <h3 class="company-info__title">会社概要</h3>
-                <div class="company-info__wrapper">
-                  <div class="company-info__item-1">会社名</div>
-                  <div class="company-info__item-2">株式会社e-tiga</div>
-                  <div class="company-info__item-3">資本金</div>
-                  <div class="company-info__item-4">1000万円</div>
-                  <div class="company-info__item-5">本社所在地</div>
-                  <div class="company-info__item-6">
-                    東京都〇〇区〇〇<br />〇〇ビル4階
-                  </div>
-                  <div class="company-info__item-7">創業</div>
-                  <div class="company-info__item-8">2018年7月10日</div>
-                  <div class="company-info__item-9">代表社員</div>
-                  <div class="company-info__item-10">田中 太郎</div>
-                </div>
+                <table class="company-info__table">
+                  <tbody>
+                    <tr>
+                      <th>会社名</th>
+                      <td>株式会社e-tiga</td>
+                    </tr>
+                    <tr>
+                      <th>資本金</th>
+                      <td>1000万円</td>
+                    </tr>
+                    <tr>
+                      <th>本社所在地</th>
+                      <td>東京都〇〇区〇〇<br class="hidden-pc"/>〇〇ビル4階</td>
+                    </tr>
+                    <tr>
+                      <th>創業</th>
+                      <td>2018年7月10日</td>
+                    </tr>
+                    <tr>
+                      <th>代表社員</th>
+                      <td>田中　太郎</td>
+                    </tr>
+                  </tbody>
+                </table>
+
+                <!-- <table class="company-info__table">
+                  <tbody>
+                    <tr>
+                      <th>会社名</th>
+                      <td>株式会社e-tiga</td>
+                      <th>資本金</th>
+                      <td>1000万円</td>
+                    </tr>
+                    <tr>
+                      <th>創業</th>
+                      <td>2018年7月10日</td>
+                      <th>代表社員</th>
+                      <td>田中 太郎</td>
+                    </tr>
+                    <tr>
+                      <th>本社所在地</th>
+                      <td colspan="3">東京都〇〇区〇〇<br />〇〇ビル4階</td>
+                    </tr>
+                  </tbody>
+                </table> -->
               </div>
             </div>
 
@@ -611,10 +642,7 @@
               <div class="company__certification">
                 <p>〇〇◎1111認証取得</p>
                 <p>
-                  国際規格である〇〇
-                  認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。国際規格である〇〇
-                  認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。国際規格である〇〇
-                  認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。
+                  国際規格である〇〇認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。国際規格である〇〇認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。国際規格である〇〇認証取得しております。セキュリティ管理システムを開発・運用しており、大切な情報をお守りします。
                 </p>
               </div>
             </div>
