--- a/index.html
+++ b/index.html
@@ -651,6 +651,16 @@
       </div>
     </section>
 
+    <div class="cta">
+      <div class="cta__inner inner">
+        <h2 class="cta__title">まずは無料お試し</h2>
+        <p class="cta__text">ライトプランなら無料でお使いいただけます。</p>
+        <div class="cta__button">
+          <a class="button button--white">お申し込み</a>
+        </div>
+      </div>
+    </div>
+
     <script src="./js/lib/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
