update: companyセクション レスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
         </div>
         <div class="company__body">
           <div class="company__tabs">
-            <button class="company__tab-item" data-tab="overview">
+            <button class="company__tab-item active" data-tab="overview">
               会社概要
             </button>
             <button class="company__tab-item" data-tab="history">沿革</button>
@@ -565,7 +565,7 @@
             <div class="company__content active" id="overview">
               <div class="company-info">
                 <h3 class="company-info__title">会社概要</h3>
-                <table class="company-info__table">
+                <table class="company-info__table hidden-tb hidden-pc">
                   <tbody>
                     <tr>
                       <th>会社名</th>
@@ -590,7 +590,7 @@
                   </tbody>
                 </table>
 
-                <!-- <table class="company-info__table">
+                <table class="company-info__table hidden-sp">
                   <tbody>
                     <tr>
                       <th>会社名</th>
@@ -609,7 +609,7 @@
                       <td colspan="3">東京都〇〇区〇〇<br />〇〇ビル4階</td>
                     </tr>
                   </tbody>
-                </table> -->
+                </table>
               </div>
             </div>
 
