add: blogセクション

--- a/index.html
+++ b/index.html
@@ -577,7 +577,9 @@
                     </tr>
                     <tr>
                       <th>本社所在地</th>
-                      <td>東京都〇〇区〇〇<br class="hidden-pc"/>〇〇ビル4階</td>
+                      <td>
+                        東京都〇〇区〇〇<br class="hidden-pc" />〇〇ビル4階
+                      </td>
                     </tr>
                     <tr>
                       <th>創業</th>
@@ -661,6 +663,75 @@
       </div>
     </div>
 
+    <section class="blog">
+      <div class="blog__inner inner">
+        <div class="blog__title">
+          <div class="heading-2">
+            <h2 class="heading-2__en">BLOG</h2>
+            <p class="heading-2__ja">ブログ</p>
+          </div>
+        </div>
+        <div class="blog__contents">
+          <div class="blog__content blog-card">
+            <div class="blog-card__img">
+              <img src="./img/blog-1-img.png" alt="" />
+            </div>
+            <h3 class="blog-card__title">タイトルタイトル</h3>
+            <p class="blog-card__text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="blog__content blog-card">
+            <div class="blog-card__img">
+              <img src="./img/blog-2-img.png" alt="" />
+            </div>
+            <h3 class="blog-card__title">タイトルタイトル</h3>
+            <p class="blog-card__text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="blog__content blog-card">
+            <div class="blog-card__img">
+              <img src="./img/blog-3-img.png" alt="" />
+            </div>
+            <h3 class="blog-card__title">タイトルタイトル</h3>
+            <p class="blog-card__text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="blog__content blog-card">
+            <div class="blog-card__img">
+              <img src="./img/blog-4-img.png" alt="" />
+            </div>
+            <h3 class="blog-card__title">タイトルタイトル</h3>
+            <p class="blog-card__text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="blog__content blog-card">
+            <div class="blog-card__img">
+              <img src="./img/blog-5-img.png" alt="" />
+            </div>
+            <h3 class="blog-card__title">タイトルタイトル</h3>
+            <p class="blog-card__text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+          <div class="blog__content blog-card">
+            <div class="blog-card__img">
+              <img src="./img/blog-6-img.png" alt="" />
+            </div>
+            <h3 class="blog-card__title">タイトルタイトル</h3>
+            <p class="blog-card__text">
+              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+            </p>
+          </div>
+        </div>
+        <div class="blog__button">
+          <a href="" class="button">ブログ一覧へ</a>
+        </div>
+      </div>
+    </section>
     <script src="./js/lib/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="./js/script.js"></script>
