--- a/index.html
+++ b/index.html
@@ -672,60 +672,72 @@
           </div>
         </div>
         <div class="blog__contents">
-          <div class="blog__content blog-card">
-            <div class="blog-card__img">
-              <img src="./img/blog-1-img.png" alt="" />
+          <a href="" class="blog__link">
+            <div class="blog__content blog-card">
+              <div class="blog-card__img">
+                <img src="./img/blog-1-img.png" alt="" />
+              </div>
+              <h3 class="blog-card__title">タイトルタイトル</h3>
+              <p class="blog-card__text">
+                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
             </div>
-            <h3 class="blog-card__title">タイトルタイトル</h3>
-            <p class="blog-card__text">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-          </div>
-          <div class="blog__content blog-card">
-            <div class="blog-card__img">
-              <img src="./img/blog-2-img.png" alt="" />
+          </a>
+          <a href="" class="blog__link">
+            <div class="blog__content blog-card">
+              <div class="blog-card__img">
+                <img src="./img/blog-2-img.png" alt="" />
+              </div>
+              <h3 class="blog-card__title">タイトルタイトル</h3>
+              <p class="blog-card__text">
+                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
             </div>
-            <h3 class="blog-card__title">タイトルタイトル</h3>
-            <p class="blog-card__text">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-          </div>
-          <div class="blog__content blog-card">
-            <div class="blog-card__img">
-              <img src="./img/blog-3-img.png" alt="" />
+          </a>
+          <a href="" class="blog__link">
+            <div class="blog__content blog-card">
+              <div class="blog-card__img">
+                <img src="./img/blog-3-img.png" alt="" />
+              </div>
+              <h3 class="blog-card__title">タイトルタイトル</h3>
+              <p class="blog-card__text">
+                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
             </div>
-            <h3 class="blog-card__title">タイトルタイトル</h3>
-            <p class="blog-card__text">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-          </div>
-          <div class="blog__content blog-card">
-            <div class="blog-card__img">
-              <img src="./img/blog-4-img.png" alt="" />
+          </a>
+          <a href="" class="blog__link">
+            <div class="blog__content blog-card">
+              <div class="blog-card__img">
+                <img src="./img/blog-4-img.png" alt="" />
+              </div>
+              <h3 class="blog-card__title">タイトルタイトル</h3>
+              <p class="blog-card__text">
+                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
             </div>
-            <h3 class="blog-card__title">タイトルタイトル</h3>
-            <p class="blog-card__text">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-          </div>
-          <div class="blog__content blog-card">
-            <div class="blog-card__img">
-              <img src="./img/blog-5-img.png" alt="" />
+          </a>
+          <a href="" class="blog__link">
+            <div class="blog__content blog-card">
+              <div class="blog-card__img">
+                <img src="./img/blog-5-img.png" alt="" />
+              </div>
+              <h3 class="blog-card__title">タイトルタイトル</h3>
+              <p class="blog-card__text">
+                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
             </div>
-            <h3 class="blog-card__title">タイトルタイトル</h3>
-            <p class="blog-card__text">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-          </div>
-          <div class="blog__content blog-card">
-            <div class="blog-card__img">
-              <img src="./img/blog-6-img.png" alt="" />
+          </a>
+          <a href="" class="blog__link">
+            <div class="blog__content blog-card">
+              <div class="blog-card__img">
+                <img src="./img/blog-6-img.png" alt="" />
+              </div>
+              <h3 class="blog-card__title">タイトルタイトル</h3>
+              <p class="blog-card__text">
+                テキストテキストテキストテキストテキストテキストテキストテキストテキスト
+              </p>
             </div>
-            <h3 class="blog-card__title">タイトルタイトル</h3>
-            <p class="blog-card__text">
-              テキストテキストテキストテキストテキストテキストテキストテキストテキスト
-            </p>
-          </div>
+          </a>
         </div>
         <div class="blog__button">
           <a href="" class="button">ブログ一覧へ</a>
